--- a/profile.html
+++ b/profile.html
@@ -110,6 +110,7 @@ nav a:hover { color: #ffcc00; }
     border: 4px solid #1c3faa;
     object-fit: cover;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .profile-card h2 {
@@ -136,6 +137,11 @@ nav a:hover { color: #ffcc00; }
     border-radius: 8px;
     border: 1px solid #ccc;
     font-size: 16px;
+}
+
+.profile-card input[disabled] {
+    background-color: #eee;
+    cursor: not-allowed;
 }
 
 .profile-card .btn-save {
@@ -208,8 +214,8 @@ footer a:hover { text-decoration: underline; }
 
   <form id="profile-form">
     <input type="text" id="profile-name" placeholder="الاسم الكامل" required>
-    <input type="email" id="profile-email" placeholder="البريد الإلكتروني" required>
-    <input type="text" id="profile-picture" placeholder="رابط الصورة">
+    <input type="email" id="profile-email" placeholder="البريد الإلكتروني" disabled>
+    <input type="file" id="profile-picture-file" style="display:none;" accept="image/*">
     <button type="submit" class="btn-save">حفظ التغييرات</button>
     <button type="button" class="btn-logout" onclick="logout()">تسجيل الخروج</button>
   </form>
@@ -240,18 +246,36 @@ if(!user){
 // تعبئة البيانات في الحقول
 document.getElementById('profile-name').value = user.name;
 document.getElementById('profile-email').value = user.email;
-document.getElementById('profile-picture').value = user.picture;
 document.getElementById('profilePic').src = user.picture;
 document.getElementById('profileName').innerText = user.name;
 document.getElementById('profileEmail').innerText = user.email;
+
+// تغيير الصورة عند الضغط عليها
+const profilePic = document.getElementById('profilePic');
+const profileFileInput = document.getElementById('profile-picture-file');
+
+profilePic.addEventListener('click', () => {
+    profileFileInput.click();
+});
+
+profileFileInput.addEventListener('change', () => {
+    const file = profileFileInput.files[0];
+    if(file){
+        const reader = new FileReader();
+        reader.onload = function(e){
+            profilePic.src = e.target.result;
+        }
+        reader.readAsDataURL(file);
+    }
+});
 
 // حفظ التغييرات
 document.getElementById('profile-form').addEventListener('submit', function(e){
     e.preventDefault();
     const updatedUser = {
         name: document.getElementById('profile-name').value,
-        email: document.getElementById('profile-email').value,
-        picture: document.getElementById('profile-picture').value
+        email: user.email,
+        picture: profilePic.src
     };
     localStorage.setItem("coursehub_user", JSON.stringify(updatedUser));
     alert('تم حفظ البيانات بنجاح!');
