--- a/header.html
+++ b/header.html
@@ -1,8 +1,14 @@
 <header>
   <div class="top-bar container">
+    <!-- شعار الموقع -->
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="CourseHub Logo" class="site-logo" style="width:120px;"></a>
+      <a href="index.html">
+        <img src="images/logo.png" alt="CourseHub Logo" class="site-logo" style="width:120px;">
+        CourseHub
+      </a>
     </div>
+
+    <!-- الروابط الرئيسية -->
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="courses.html">الدورات</a>
@@ -10,84 +16,129 @@
       <a href="certificates.html">الشهادات</a>
       <a href="login.html" id="login-link">تسجيل الدخول</a>
     </nav>
-    <div id="user-info" class="user-info-container"></div>
+
+    <!-- المستخدم + إشعارات + اختيار اللغة -->
+    <div class="user-info-container" id="user-info">
+      <!-- سيتم تعبئتها بواسطة JS -->
+    </div>
   </div>
 </header>
 
+<!-- CSS إضافي للDropdown واللغات والإشعارات -->
 <style>
-/* Dropdown المستخدم */
+/* --- User Dropdown --- */
 .user-info-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+  cursor: pointer;
 }
 
 .user-info-container img.user-pic {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #ff9900;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  border: 2px solid #ffcc00;
+  object-fit: cover;
+  transition: 0.3s;
 }
 
+.user-info-container img.user-pic:hover {
+  transform: scale(1.05);
+}
+
+/* إشعار */
+.user-info-container .notification {
+  position: relative;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
+.user-info-container .notification .badge {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: #ff0000;
+  color: white;
+  font-size: 12px;
+  padding: 2px 5px;
+  border-radius: 50%;
+}
+
+/* قائمة منبثقة */
 .user-info-container .dropdown-menu {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 50px;
-    background: white;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    z-index: 999;
-    min-width: 150px;
+  display: none;
+  position: absolute;
+  top: 55px;
+  right: 0;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  overflow: hidden;
+  min-width: 180px;
+  z-index: 999;
+  flex-direction: column;
 }
 
-.user-info-container:hover .dropdown-menu {
-    display: block;
+.user-info-container.active .dropdown-menu {
+  display: flex;
 }
 
 .user-info-container .dropdown-menu a {
-    display: block;
-    padding: 10px 15px;
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-    transition: 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 12px 15px;
+  color: #333;
+  text-decoration: none;
+  font-weight: 600;
+  transition: 0.3s;
 }
 
 .user-info-container .dropdown-menu a:hover {
-    background-color: #f4f4f4;
+  background-color: #f0f0f0;
 }
 
-/* Responsive */
-@media(max-width:768px){
-    .user-info-container { gap: 5px; }
-    .user-info-container img.user-pic { width: 35px; height: 35px; }
+/* اختيار اللغة */
+.language-selector {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  color: white;
+}
+
+.language-selector i {
+  font-size: 18px;
+}
+
+.language-dropdown {
+  display: none;
+  position: absolute;
+  top: 35px;
+  right: 0;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  overflow: hidden;
+  min-width: 100px;
+  flex-direction: column;
+  z-index: 999;
+}
+
+.language-selector.active .language-dropdown {
+  display: flex;
+}
+
+.language-dropdown div {
+  padding: 10px 15px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.language-dropdown div:hover {
+  background-color: #f0f0f0;
 }
 </style>
-
-<script>
-// عرض المستخدم إذا مسجل الدخول
-const user = JSON.parse(localStorage.getItem("coursehub_user"));
-
-if(user){
-    document.getElementById('login-link').style.display = 'none';
-    document.getElementById('user-info').innerHTML = `
-      <img src="${user.picture}" alt="${user.name}" class="user-pic">
-      <span>${user.name}</span>
-      <div class="dropdown-menu">
-        <a href="profile.html">حسابي</a>
-        <a href="#" onclick="logout()">تسجيل الخروج</a>
-      </div>
-    `;
-}
-
-// Logout
-function logout(){
-    localStorage.removeItem("coursehub_user");
-    window.location.href = 'login.html';
-}
-</script>
