--- a/header.html
+++ b/header.html
@@ -1,38 +1,156 @@
+<!-- Header -->
 <header>
   <div class="top-bar container">
-    <!-- شعار الموقع -->
+    <!-- Logo -->
     <div class="logo">
       <a href="index.html">
-        <img src="images/logo.png" alt="CourseHub Logo" class="site-logo" style="width:120px;">
+        <img src="images/logo.png" alt="CourseHub Logo" class="site-logo" style="width:120px; height:auto;">
         CourseHub
       </a>
     </div>
 
-    <!-- الروابط الرئيسية -->
+    <!-- Navigation -->
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
-      <a href="login.html" id="login-link">تسجيل الدخول</a>
     </nav>
 
-    <!-- المستخدم + إشعارات + اختيار اللغة -->
-    <div class="user-info-container" id="user-info">
-      <!-- سيتم تعبئتها بواسطة JS -->
+    <!-- Notifications & Language -->
+    <div class="header-actions">
+      <!-- Notifications -->
+      <div class="notifications-container">
+        <i class="fa fa-bell fa-lg" id="notif-icon" style="cursor:pointer;"></i>
+        <div class="notifications-dropdown" id="notif-dropdown">
+          <p class="notif-item">لا توجد تنبيهات جديدة</p>
+        </div>
+      </div>
+
+      <!-- Language Selector -->
+      <div class="language-container">
+        <i class="fa fa-globe fa-lg" id="lang-icon" style="cursor:pointer;"></i>
+        <div class="language-dropdown" id="lang-dropdown">
+          <a href="#" onclick="setLanguage('ar')">العربية</a>
+          <a href="#" onclick="setLanguage('fr')">Français</a>
+          <a href="#" onclick="setLanguage('en')">English</a>
+        </div>
+      </div>
+
+      <!-- User Info -->
+      <div class="user-info-container" id="user-info"></div>
     </div>
   </div>
 </header>
 
-<!-- CSS إضافي للDropdown واللغات والإشعارات -->
 <style>
-/* --- User Dropdown --- */
-.user-info-container {
+/* Header و Dropdown احترافي */
+header {
+  background-color: #1c3faa;
+  color: white;
+  padding: 15px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Inter', sans-serif;
+}
+
+header .logo a {
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  font-size: 28px;
   gap: 10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+nav a:hover { color: #ffcc00; }
+
+/* Header Actions */
+.header-actions {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+/* Notifications */
+.notifications-container {
   position: relative;
+  color: white;
+}
+
+.notifications-dropdown {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 30px;
+  background: white;
+  color: #333;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  min-width: 200px;
+  z-index: 999;
+  overflow: hidden;
+}
+
+.notifications-dropdown .notif-item {
+  padding: 10px 15px;
+  border-bottom: 1px solid #eee;
+  font-size: 14px;
+}
+
+.notifications-dropdown .notif-item:last-child { border-bottom: none; }
+
+/* Language */
+.language-container {
+  position: relative;
+  color: white;
+}
+
+.language-dropdown {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 30px;
+  background: white;
+  color: #333;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  min-width: 120px;
+  z-index: 999;
+  overflow: hidden;
+}
+
+.language-dropdown a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
+}
+
+.language-dropdown a:hover { background-color: #f0f0f0; }
+
+/* User Info */
+.user-info-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 8px;
   cursor: pointer;
+  color: white;
 }
 
 .user-info-container img.user-pic {
@@ -41,104 +159,101 @@
   border-radius: 50%;
   border: 2px solid #ffcc00;
   object-fit: cover;
-  transition: 0.3s;
 }
 
-.user-info-container img.user-pic:hover {
-  transform: scale(1.05);
-}
-
-/* إشعار */
-.user-info-container .notification {
-  position: relative;
-  font-size: 20px;
-  color: white;
-  cursor: pointer;
-}
-.user-info-container .notification .badge {
-  position: absolute;
-  top: -5px;
-  right: -10px;
-  background: #ff0000;
-  color: white;
-  font-size: 12px;
-  padding: 2px 5px;
-  border-radius: 50%;
-}
-
-/* قائمة منبثقة */
 .user-info-container .dropdown-menu {
   display: none;
   position: absolute;
-  top: 55px;
   right: 0;
+  top: 55px;
   background: white;
-  border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  border-radius: 8px;
   overflow: hidden;
-  min-width: 180px;
   z-index: 999;
-  flex-direction: column;
-}
-
-.user-info-container.active .dropdown-menu {
-  display: flex;
+  min-width: 180px;
 }
 
 .user-info-container .dropdown-menu a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+  display: block;
   padding: 12px 15px;
   color: #333;
   text-decoration: none;
   font-weight: 600;
-  transition: 0.3s;
 }
 
 .user-info-container .dropdown-menu a:hover {
   background-color: #f0f0f0;
 }
 
-/* اختيار اللغة */
-.language-selector {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  color: white;
-}
-
-.language-selector i {
-  font-size: 18px;
-}
-
-.language-dropdown {
-  display: none;
-  position: absolute;
-  top: 35px;
-  right: 0;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  overflow: hidden;
-  min-width: 100px;
-  flex-direction: column;
-  z-index: 999;
-}
-
-.language-selector.active .language-dropdown {
-  display: flex;
-}
-
-.language-dropdown div {
-  padding: 10px 15px;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.language-dropdown div:hover {
-  background-color: #f0f0f0;
-}
+/* إظهار القوائم عند الضغط */
+.show { display: block !important; }
 </style>
+
+<script>
+// Google Login Handler
+function handleGoogleLogin(response) {
+  const jwt = response.credential;
+  const payload = JSON.parse(atob(jwt.split('.')[1]));
+  localStorage.setItem("coursehub_user", JSON.stringify({
+    name: payload.name,
+    email: payload.email,
+    picture: payload.picture
+  }));
+  location.reload();
+}
+
+// User Display
+const user = JSON.parse(localStorage.getItem("coursehub_user"));
+const userContainer = document.getElementById('user-info');
+if(user){
+  document.getElementById('login-link')?.style.display = 'none';
+  userContainer.innerHTML = `
+    <img src="${user.picture}" alt="${user.name}" class="user-pic" id="user-pic">
+    <span id="user-name">${user.name}</span>
+    <div class="dropdown-menu" id="user-dropdown">
+      <a href="profile.html">حسابي</a>
+      <a href="achievements.html">الإنجازات</a>
+      <a href="my-courses.html">دوراتي</a>
+      <a href="settings.html">الإعدادات</a>
+      <a href="#" onclick="logout()">تسجيل الخروج</a>
+    </div>
+  `;
+}
+
+// Logout
+function logout(){
+  localStorage.removeItem("coursehub_user");
+  window.location.href='login.html';
+}
+
+// Toggle Dropdowns
+document.addEventListener('click', function(e){
+  // User dropdown
+  if(e.target.closest('#user-name') || e.target.closest('#user-pic')){
+    document.getElementById('user-dropdown').classList.toggle('show');
+  } else {
+    document.getElementById('user-dropdown')?.classList.remove('show');
+  }
+
+  // Notifications dropdown
+  if(e.target.closest('#notif-icon')){
+    document.getElementById('notif-dropdown').classList.toggle('show');
+  } else if(!e.target.closest('.notifications-container')){
+    document.getElementById('notif-dropdown')?.classList.remove('show');
+  }
+
+  // Language dropdown
+  if(e.target.closest('#lang-icon')){
+    document.getElementById('lang-dropdown').classList.toggle('show');
+  } else if(!e.target.closest('.language-container')){
+    document.getElementById('lang-dropdown')?.classList.remove('show');
+  }
+});
+
+// Language selector
+function setLanguage(lang){
+  alert("تم تغيير اللغة إلى: " + lang);
+  document.getElementById('lang-dropdown')?.classList.remove('show');
+}
+</script>
