--- a/header.html
+++ b/header.html
@@ -1,17 +1,31 @@
-<footer>
-  <div class="container footer-content">
-    <div class="footer-links">
+<header>
+  <div class="top-bar container">
+    <div class="logo">CourseHub</div>
+
+    <nav>
       <a href="index.html">الرئيسية</a>
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
+    </nav>
+
+    <div class="header-actions">
+      <div class="language-dropdown">
+        <i class="fa fa-globe"></i>
+        <select id="languageSelect">
+          <option value="ar">العربية</option>
+          <option value="fr">Français</option>
+          <option value="en">English</option>
+        </select>
+      </div>
+      <div class="notifications">
+        <i class="fa fa-bell"></i>
+        <span class="notif-count" id="notifCount">3</span>
+      </div>
     </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+
+    <div class="user-info-container" id="user-info">
+      <a href="login.html" id="login-link">تسجيل الدخول</a>
     </div>
-    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
   </div>
-</footer>
+</header>
