--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,7 @@
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
+      <a href="login.html">تسجيل الدخول</a>
     </div>
     <div class="socials">
       <a href="#"><i class="fab fa-facebook-f"></i></a>
