--- a/certificates.html
+++ b/certificates.html
@@ -6,12 +6,12 @@
 <title>الشهادات - CourseHub</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="main.js" defer></script>
 </head>
 <body>
 
-<header>
+<!-- Header سيتم تحميله تلقائياً عبر main.js -->
 <div id="header-placeholder"></div>
-</header>
 
 <section>
   <h2>الشهادات الخاصة بك</h2>
@@ -34,19 +34,13 @@
     </div>
   </div>
 </section>
+
+<!-- Footer سيتم تحميله تلقائياً عبر main.js -->
 <div id="footer-placeholder"></div>
-<footer>
 
+<script>
+  // لا حاجة لإعادة تحميل الهيدر والفوتر هنا، main.js يتولى ذلك
+</script>
 
-  <script>
-    // تحميل الهيدر والفوتر
-    fetch('header.html').then(r => r.text()).then(html => {
-      document.getElementById('header-placeholder').innerHTML = html;
-      // يمكنك هنا إعادة تهيئة الـ JS الخاص بالهيدر مثل dropdown
-    });
-    fetch('footer.html').then(r => r.text()).then(html => {
-      document.getElementById('footer-placeholder').innerHTML = html;
-    });
-  </script>
 </body>
 </html>
