--- a/course-detail.html
+++ b/course-detail.html
@@ -6,21 +6,12 @@
 <title>تفاصيل الدورة - CourseHub</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="main.js" defer></script>
 </head>
 <body>
 
-<header>
-  <div class="top-bar">
-    <div class="logo">CourseHub</div>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="login.html">تسجيل الدخول</a>
-    </nav>
-  </div>
-</header>
+<!-- Header سيتم تحميله تلقائياً عبر main.js -->
+<div id="header-placeholder"></div>
 
 <section class="course-detail">
   <h2>تطوير الويب للمبتدئين</h2>
@@ -61,25 +52,8 @@
   </form>
 </section>
 
-<footer>
-  <div class="container footer-content">
-    <div class="footer-links">
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="login.html">تسجيل الدخول</a>
-    </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    </div>
-    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
-  </div>
-</footer>
+<!-- Footer سيتم تحميله تلقائياً عبر main.js -->
+<div id="footer-placeholder"></div>
 
-<script src="main.js"></script>
 </body>
 </html>
