--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,9 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>استعادة كلمة المرور - CourseHub</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="main.js" defer></script>
 </head>
 <body>
-<section class="course-detail">
+
+<!-- Google Init -->
+<div id="g_id_onload"
+     data-client_id="367073521017-na5sqgdpp98hqrd6us63l4117l4vbacm.apps.googleusercontent.com"
+     data-callback="handleGoogleLogin"
+     data-auto_prompt="false">
+</div>
+
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
+
+<!-- Main Section -->
+<section class="course-detail container">
   <h2>استعادة كلمة المرور</h2>
   <form>
     <label for="email">البريد الإلكتروني المسجل</label>
@@ -16,6 +30,9 @@
   </form>
   <p>تذكرت كلمة المرور؟ <a href="login.html">تسجيل الدخول</a></p>
 </section>
-<script src="main.js"></script>
+
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
+
 </body>
 </html>
