--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
      data-auto_prompt="false">
 </div>
 
-<!-- Header و Footer سيتم استدعاؤهم تلقائياً عبر main.js -->
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
 
 <!-- Hero -->
 <section class="hero">
@@ -85,7 +86,8 @@
   </div>
 </section>
 
-<!-- Footer سيتم تحميله عبر main.js -->
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
 
 <script>
 function handleGoogleLogin(response) {
