--- a/login.html
+++ b/login.html
@@ -6,12 +6,17 @@
 <title>تسجيل الدخول - CourseHub</title>
 
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <!-- Google Identity Services -->
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="main.js" defer></script>
 </head>
 
 <body>
+
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
 
 <section class="course-detail">
   <h2>تسجيل الدخول</h2>
@@ -43,11 +48,13 @@
 
   <p><a href="forgot-password.html">نسيت كلمة المرور؟</a></p>
   <p>ليس لديك حساب؟ <a href="register.html">إنشاء حساب</a></p>
-
 </section>
 
-<!-- Google Login Handler -->
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
+
 <script>
+// Google Login Handler
 function handleGoogleLogin(response) {
   const jwt = response.credential;
   const payload = JSON.parse(atob(jwt.split('.')[1]));
