--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -6,9 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>إنشاء حساب - CourseHub</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
+
+<!-- Main Section -->
 <section class="course-detail">
   <h2>إنشاء حساب جديد</h2>
 
@@ -21,8 +25,15 @@
   <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
 </section>
 
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
+
+<!-- Main JS لاستدعاء الهيدر والفوتر -->
+<script src="main.js"></script>
+
+<!-- ملفات تسجيل الحساب -->
 <script src="firebase-config.js"></script>
 <script src="register.js"></script>
+
 </body>
 </html>
-```
