--- a/tests.html
+++ b/tests.html
@@ -9,19 +9,10 @@
 </head>
 <body>
 
-<header>
-  <div class="top-bar">
-    <div class="logo">CourseHub</div>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="login.html">تسجيل الدخول</a>
-    </nav>
-  </div>
-</header>
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
 
+<!-- Main Section -->
 <section>
   <h2>اختبارات الدورات</h2>
   <div class="courses-grid">
@@ -43,25 +34,11 @@
   </div>
 </section>
 
-<footer>
-  <div class="container footer-content">
-    <div class="footer-links">
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="login.html">تسجيل الدخول</a>
-    </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    </div>
-    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
-  </div>
-</footer>
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
 
+<!-- Main JS لاستدعاء الهيدر والفوتر -->
 <script src="main.js"></script>
+
 </body>
 </html>
