--- a/tests.html
+++ b/tests.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+  <link rel="stylesheet" href="header.css">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الاختبارات - CourseHub</title>
