--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ function handleGoogleLogin(response) {
     }));
     location.reload();
 }
+     <script src="header.js"></script>
+
 </script>
 
 </body>
