--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,39 @@
 <footer>
-  <div class="container footer-content">
-    <div class="footer-links">
+  <div class="footer-container container">
+
+    <div class="footer-col">
+      <h4>CourseHub</h4>
+      <p>منصة تعليمية عربية تقدم دورات، اختبارات وشهادات باحترافية عالية.</p>
+    </div>
+
+    <div class="footer-col">
+      <h4>روابط سريعة</h4>
       <a href="index.html">الرئيسية</a>
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>الحساب</h4>
       <a href="login.html">تسجيل الدخول</a>
+      <a href="register.html">إنشاء حساب</a>
+      <a href="my-courses.html">دوراتي</a>
     </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+
+    <div class="footer-col">
+      <h4>تابعنا</h4>
+      <div class="social-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-youtube"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
     </div>
-    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
+
+  </div>
+
+  <div class="footer-bottom">
+    © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
   </div>
 </footer>
