--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ar">
 <head>
      <link rel="stylesheet" href="header.css">
+     <link rel="stylesheet" href="footer.css">
+
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,6 +105,7 @@ function handleGoogleLogin(response) {
     location.reload();
 }
      <script src="header.js"></script>
+<script src="footer.js"></script>
 
 </script>
 
