--- a/profile.html
+++ b/profile.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <link rel="stylesheet" href="header.css">
-
+ <link rel="stylesheet" href="header.css">
+     <link rel="stylesheet" href="footer.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>حسابي - CourseHub</title>
@@ -184,6 +184,8 @@ function logout(){
     localStorage.removeItem("coursehub_user");
     window.location.href='login.html';
 }
+     <script src="header.js"></script>
+<script src="footer.js"></script>
 </script>
 
 </body>
