--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@ function handleGoogleLogin(response) {
     }));
     location.reload();
 }
-     <script src="header.js"></script>
-<script src="footer.js"></script>
+ <script src="header.js"></script>
+  <script src="footer.js"></script>
+  <script src="main.js"></script>
 
 </script>
 
