--- a/course-detail.html
+++ b/course-detail.html
@@ -54,7 +54,7 @@
   </form>
 </section>
 
-<!-- Footer سيتم تحميله تلقائياً عبر main.js -->
+<link rel="stylesheet" href="footer.css">
 <div id="footer-placeholder"></div>
 
 </body>
