--- a/public/certificates.html
+++ b/public/certificates.html
@@ -21,19 +21,19 @@
   <h2>الشهادات الخاصة بك</h2>
   <div class="courses-grid">
     <div class="card">
-      <img src="images/certificate.jpg" alt="Certificate">
+      <img src="../images/certificate.jpg" alt="Certificate">
       <div class="card-content">
         <h3>شهادة تطوير الويب</h3>
         <p>تم إكمال الدورة بنجاح.</p>
-        <a href="images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
+        <a href="../images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
       </div>
     </div>
     <div class="card">
-      <img src="images/certificate.jpg" alt="Certificate">
+      <img src="../images/certificate.jpg" alt="Certificate">
       <div class="card-content">
         <h3>شهادة الذكاء الاصطناعي</h3>
         <p>تم إكمال الدورة بنجاح.</p>
-        <a href="images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
+        <a href="../images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
       </div>
     </div>
   </div>
