--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <h2>الدورات الأكثر شعبية</h2>
   <div class="courses-grid">
     <div class="card">
-      <img src="images/course1.jpg" alt="Course">
+      <img src="../images/course1.jpg" alt="Course">
       <div class="card-content">
         <h3>تطوير الويب للمبتدئين</h3>
         <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="images/course2.jpg" alt="Course">
+      <img src="../images/course2.jpg" alt="Course">
       <div class="card-content">
         <h3>الذكاء الاصطناعي</h3>
         <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="images/course3.jpg" alt="Course">
+      <img src="../images/course3.jpg" alt="Course">
       <div class="card-content">
         <h3>التصميم الجرافيكي</h3>
         <p>تعلم Photoshop و Illustrator من الصفر.</p>
