--- a/public/course-detail.html
+++ b/public/course-detail.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <img src="../images/course1.jpg" alt="Course Detail">
+  <img src="images/course1.jpg" alt="Course Detail">
 
   <p>في هذه الدورة، ستتعلم كل أساسيات HTML, CSS, وJavaScript لإنشاء مواقع ويب تفاعلية. ستحصل على مشروع عملي لتطبيق كل ما تعلمته.</p>
 
