--- a/public/index.html
+++ b/public/index.html
@@ -104,8 +104,7 @@ function handleGoogleLogin(response) {
     location.reload();
 }
 <link rel="stylesheet" href="footer.css">
-
-</script>
+<div id="footer-placeholder"></div>
 
 </body>
 </html>
