--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <link rel="stylesheet" href="login.css">
-<link rel="stylesheet" href="header.css">
+<link rel="stylesheet" href="style.css">
   
    
   <meta charset="UTF-8">
@@ -88,6 +88,7 @@
     }
     
 </script>
-<link rel="stylesheet" href="footer.css">
+<link rel="stylesheet" href="login.css">
+<script src="main.js" defer></script>
 </body>
 </html>
