--- a/public/header.html
+++ b/public/header.html
@@ -13,10 +13,13 @@
       <a href="certificates.html">الشهادات</a>
     </nav>
 
-    <!-- Header Actions -->
-    <div class="header-actions">
+  <div class="header-actions">
+      <a href="login.html" id="login-link" class="login-btn">تسجيل الدخول</a>
       <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
       <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
+      <div id="user-info" class="user-info-container"></div>
+    </div>
+  </div>
       
       <!-- User Info / Login -->
       <div id="user-info" class="user-info-container"></div>
