--- a/public/header.html
+++ b/public/header.html
@@ -17,14 +17,21 @@
   <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
   <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
 
-  <!-- زر تسجيل الدخول -->
-  <a href="login.html" id="login-link">تسجيل الدخول</a>
+
+
+
+
+   
 
   <!-- مكان اسم المستخدم يظهر فقط عند تسجيل الدخول -->
   <div id="user-info" class="user-info-container"></div>
 </div>
 
-      
+  <!-- User Info / Login -->
+      <div id="user-info" class="user-info-container"></div>
+      <a href="login.html" id="login-link" class="login-btn">تسجيل الدخول</a>
+    </div>
+  </div>
   
 
   <!-- Search Bar (ديناميكي) -->
