--- a/public/achievements.html
+++ b/public/achievements.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="achievements.css">
 </head>
 <body>
+  <div id="main-header"></div>
 
+  <main class="achievements-container">
   <!-- Header (يتم تضمينه كما هو عندك) -->
   <header id="main-header"></header>
 
@@ -55,7 +57,11 @@
     </section>
 
   </main>
-<link rel="stylesheet" href="footer.css">
+ <div id="main-footer"></div>
+
+  <link rel="stylesheet" href="footer.css">
+  <script src="achievements.js"></script>
+  <script src="layout.js"></script>
   <script src="achievements.js"></script>
 </body>
 </html>
