--- a/public/achievements.html
+++ b/public/achievements.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <link rel="stylesheet" href="header.css">
   <meta charset="UTF-8">
   <title>إنجازاتي | CourseHub</title>
+
+  <!-- Header & Footer Styles -->
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="footer.css">
 
   <!-- Font & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <!-- Styles -->
+  <!-- Page Styles -->
   <link rel="stylesheet" href="achievements.css">
 </head>
 <body>
+
+  <!-- Header -->
   <div id="main-header"></div>
 
-  <main class="achievements-container">
-  <!-- Header (يتم تضمينه كما هو عندك) -->
-  <header id="main-header"></header>
-
+  <!-- Main Content -->
   <main class="achievements-container">
 
     <h1 class="page-title">إنجازاتي</h1>
@@ -57,11 +59,13 @@
     </section>
 
   </main>
- <div id="main-footer"></div>
 
-  <link rel="stylesheet" href="footer.css">
-  <script src="achievements.js"></script>
+  <!-- Footer -->
+  <div id="main-footer"></div>
+
+  <!-- Scripts -->
   <script src="layout.js"></script>
   <script src="achievements.js"></script>
+
 </body>
 </html>
