--- a/public/achievements.html
+++ b/public/achievements.html
@@ -64,7 +64,7 @@
   <div id="main-footer"></div>
 
   <!-- Scripts -->
-  <script src="layout.js"></script>
+  <script src="header.js"></script>
   <script src="achievements.js"></script>
 
 </body>
