--- a/public/achievements.html
+++ b/public/achievements.html
@@ -64,8 +64,8 @@
   <div id="main-footer"></div>
 
   <!-- Scripts -->
-  <script src="header.js"></script>
-  <script src="footer.js"></script>
+<link rel="stylesheet" href="header.css">
+<link rel="stylesheet" href="footer.css">
   <script src="achievements.js"></script>
 
 </body>
